# bubble2

./: .gitignore  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bitmap-styler.cpp
app/src/main/java/com/nkanaev/comics/: MainApplication.java
app/src/main/java/com/nkanaev/comics/activity/: MainActivity.java  ReaderActivity.java
app/src/main/java/com/nkanaev/comics/fragment/: AboutFragment.java  HeaderFragment.java  LibraryBrowserFragment.java  LibraryFragment.java  ReaderFragment.java  ThumbnailFragment.java
app/src/main/java/com/nkanaev/comics/managers/: Scanner.java  Utils.java
app/src/main/java/com/nkanaev/comics/model/: Comic.java
app/src/main/java/com/nkanaev/comics/parsers/: DirectoryParser.java  LibSevenZParser.java  ParserFactory.java  PdfRendererParser.java  RarParser.java  SevenZParser.java  TarParser.java  ZipParser.java
app/src/main/java/com/nkanaev/comics/view/: ComicViewPager.java  PageImageView.java  SquareImageView.java
app/src/main/res/drawable/: ic_download_18.xml
app/src/main/res/layout/: card_thumbnail.xml  fragment_header.xml  fragment_library.xml  fragment_librarybrowser.xml  fragment_thumbnail.xml  layout_header.xml  layout_reader.xml
app/src/main/res/menu/: browser.xml  reader.xml
app/src/main/res/values/: strings.xml  styles.xml  styles_reader.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/xml/: data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
